# credit-scoring

./: .gitignore  .pre-commit-config.yaml  2.EDA_selected_sample.ipynb  README.md  pyproject.toml
config/: config.yaml
models/: calibrator_cat.pkl  catboost_model.cbm  feature_list.txt  preprocessor.pkl
nb/: 1.Data_labeling.ipynb  1.data_labeling.ipynb  2.EDA_selected_sample.ipynb  3.Model_Development.ipynb  4.pricing.ipynb  credit_scoring.ipynb  functions.py
scripts/: example_request.json  test_api.py  test_inference.py
src/score_pd/: api.py  constants.py  inference.py
